tasks: build service

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,14 +6,46 @@
 - include_tasks: setup-debian.yml
   when: ansible_os_family == 'Debian'
 
-#- include_tasks: initialize.yml
-#- include_tasks: configure.yml
+# TODO: - include_tasks: build.yml
+- name: Get the master service repository
+  git:
+    repo: https://gitlab.com/crdc/apex/master
+    dest: /usr/src/go/src/gitlab.com/crdc/apex/master
+  tags: [ "plantd-master" ]
+
+- name: Build the master service GraphQL schema
+  shell: make schema
+  args:
+    chdir: /usr/src/go/src/gitlab.com/crdc/apex/master
+  tags: [ "plantd-master" ]
+
+- name: Build the master service
+  shell: make
+  args:
+    chdir: /usr/src/go/src/gitlab.com/crdc/apex/master
+  tags: [ "plantd-master" ]
+
+# TODO: - include_tasks: initialize.yml
+- name: Run database setup
+  shell:
+    cmd: |
+      pgcli -h localhost -p 5432 -U postgres >/dev/null <<EOF
+      \i data/1.0/1_users.sql
+      \i data/1.0/2_roles.sql
+      \i data/1.0/3_rel_users_roles.sql
+      EOF
+  args:
+    chdir: /usr/src/go/src/gitlab.com/crdc/apex/master
+  tags: [ "plantd-master" ]
+
+# TODO: - include_tasks: configure.yml
 
 - name: Ensure Plantd Master is started and enabled on boot.
   service:
     name: "{{ plantd_master_daemon }}"
     state: "{{ plantd_master_service_state }}"
     enabled: "{{ plantd_master_service_enabled }}"
+  tags: [ "plantd-master" ]
 
 # Configure Plantd Master
 #- import_tasks: databases.yml
