--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,6 +13,12 @@
     dest: /usr/src/go/src/gitlab.com/crdc/apex/master
   tags: [ "plantd-master" ]
 
+- name: Build the master service GraphQL schema
+  shell: make schema
+  args:
+    chdir: /usr/src/go/src/gitlab.com/crdc/apex/master
+  tags: [ "plantd-master" ]
+
 - name: Build the master service
   shell: make all
   args:
