--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -32,6 +32,8 @@
   shell: make all
   args:
     chdir: /usr/src/go/src/gitlab.com/crdc/apex/master
+  environment:
+    PATH: {{ ansible_env.HOME }}/go/bin:{{ ansible_env.PATH }}
   tags: [ "plantd-master" ]
 
 # TODO: - include_tasks: initialize.yml
