--- a/tasks/initialize.yml
+++ b/tasks/initialize.yml
@@ -2,11 +2,16 @@
 - name: Run database setup
   shell:
     cmd: |
-      pgcli -h localhost -p 5432 -U postgres >/dev/null <<EOF
-      \i data/1.0/1_users.sql
-      \i data/1.0/2_roles.sql
-      \i data/1.0/3_rel_users_roles.sql
-      EOF
+      psql -a -q -h "{{ plantd_master_dbhost }}" \
+        -d "{{ plantd_master_dbname }}" \
+        -U "{{ plantd_master_dbuser }}" \
+        -p "{{ plantd_master_dbport }}" \
+        -W "{{ plantd_master_dbpass }}" \
+        -f "{{ item }}"
+  with_items:
+    - "data/1.0/1_users.sql"
+    - "data/1.0/2_roles.sql"
+    - "data/1.0/3_rel_users_roles.sql"
   args:
     chdir: "{{ plantd_master_srcdir }}"
   tags: [ "plantd-master" ]
