--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,7 +7,9 @@
   when: ansible_os_family == 'Debian'
 
 - include_tasks: build.yml
-- include_tasks: initialize.yml
+# FIXME: can't get postgres role to set user/pass
+# - include_tasks: initialize.yml
+
 # TODO: - include_tasks: configure.yml
 # TODO: - import_tasks: users.yml
 
