--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,8 +13,9 @@
 # TODO: - import_tasks: users.yml
 
 - name: Ensure Plantd Master is started and enabled on boot.
-  service:
+  systemd:
     name: "{{ plantd_master_daemon }}"
     state: "{{ plantd_master_service_state }}"
     enabled: "{{ plantd_master_service_enabled }}"
+    daemon_reload: yes
   tags: [ "plantd-master" ]
