--- a/tasks/initialize.yml
+++ b/tasks/initialize.yml
@@ -4,7 +4,7 @@
     src: apex-master.service.j2
     dest: /lib/systemd/system/apex-master.service
     mode: 0644
-  notify: restart plantd-master
+  #notify: restart plantd-master
   tags: [ "plantd-master" ]
 
 # FIXME: can't get postgres role to set user/pass
