--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,6 +6,15 @@
 - include_tasks: setup-debian.yml
   when: ansible_os_family == 'Debian'
 
+# FIXME: build steps refuse to use user $PATH bin, do this to get past for now
+- name: Install go-bindata
+  command: go get github.com/go-bindata/go-bindata/go-bindata
+  tags: [ "plantd-master" ]
+
+- name: Link go-bindata
+  file: src=/usr/src/go/bin/go-bindata dest=/usr/bin/go-bindata state=link
+  tags: [ "plantd-master" ]
+
 - include_tasks: build.yml
 - include_tasks: initialize.yml
 
