--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,7 +12,10 @@
   tags: [ "plantd-master" ]
 
 - name: Link go-bindata
-  file: src=/usr/src/go/bin/go-bindata dest=/usr/bin/go-bindata state=link
+  file:
+    src: "{{ plantd_master_srcdir }}/bin/go-bindata"
+    dest: /usr/bin/go-bindata
+    state: link
   tags: [ "plantd-master" ]
 
 - include_tasks: build.yml
